--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 	color: rgba(3, 101, 17, 1);
 	padding: 10px;
 	border: solid 3px gray;
-	background: linear-gradient(135deg, #eef, #dde);
+	background: linear-gradient(135deg, #fff, #ddd);
 	width: 60%;
 	letter-spacing: 2px;
 	margin: 5px auto;
@@ -27,7 +27,10 @@
 	border: 1px solid gray;
 	margin: 5px;
 	padding: 5px;
+	font-family: sans-serif;
+	font-size: 1.2em;
 }
+
 #gamesContainer .thumbContainer {
 	float: left;
 	width: 150px;
